# MOCHI

./: BasicRunner.cpp  CMakeLists.txt  GenerateQuery.cpp  MDRunner.cpp  MWRunner.cpp  README.md
AdvancedHIN/: AdvancedPeeling.cpp  AdvancedPeeling.h
Config/: config.h
LocalHIN/: localHIN.cpp  localHIN.h
Match/: match.cpp  match.h
Naive_origin/: NaiveOriginPeeling.cpp  NaiveOriginPeeling.h
RapidMatch/: CMakeLists.txt  rapidMatch.cpp  rapidMatch.h
RapidMatch/configuration/: config.h  types.h
RapidMatch/graph/: graph.cpp  graph.h
RapidMatch/matching/: CMakeLists.txt  encoder.cpp  encoder.h  engine.cpp  execution_tree.cpp  execution_tree.h  execution_tree_generator.h  execution_tree_node.cpp  execution_tree_node.h  matchingcommand.cpp  matchingcommand.h  playground.cpp  preprocessor.cpp  query_plan_generator.cpp  query_plan_generator.h
RapidMatch/utility/: graphoperations.cpp
RapidMatch/utility/han/utils/: util.cpp  util.hpp
RapidMatch/utility/nucleus_decomposition/: nd_interface.cpp
Result/: result.h
Util/: Util.cpp  Util.h
data/example/: edge.txt  graph.txt  matchGraph.txt  vertex.txt
data/example/motifs/4_1/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_1/2/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_1/4/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_1/6/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_1/8/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_10/: edge.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_10/2/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_10/4/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_10/6/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_10/8/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_11/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_11/2/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_11/4/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_11/6/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_11/8/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_12/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_12/2/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_12/4/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_12/6/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_12/8/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_13/: edge.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_13/2/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_13/4/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_13/6/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_13/8/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_14/: edge.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_14/2/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_14/4/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_14/6/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_14/8/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_15/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_15/2/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_15/4/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_15/6/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_15/8/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_16/: edge.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_16/2/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_16/4/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_16/6/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_16/8/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/example/motifs/4_17/: edge.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_17/2/: 1.txt  10.txt  2.txt  3.txt  5.txt  6.txt  (+3 more)
data/example/motifs/4_18/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_19/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_2/: edge.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_20/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_3/: edge.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_4/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_5/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_6/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_7/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_8/: edge.txt  info.txt  queryGraph.txt  vertex.txt
data/example/motifs/4_9/: edge.txt  graph.txt  info.txt  queryGraph.txt  vertex.txt
graph/: graph.cpp  graph.h
(+470 files in other folders)
